--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,8 @@
     align-items: center;
     justify-content: space-between;
     margin: 20px;
-    background: #14213d;
+    background: rgb(35, 34, 35);
+    box-shadow: 0px 0px 5px black;
     border-radius: 30px;
     width: 95%;
 }
@@ -171,11 +172,12 @@
     text-align: center;
     padding: 15px;
     font-size: 30px;
-    background: #e5e5e5;
-    color: #14213d;
+    background: rgb(35, 34, 35);
+    color: white;
     width: 97%;
     margin: 2%;
     border-radius: 20px;
+    box-shadow: 0px 0px 5px black;
 }
 .search-artist{
     display: flex;
@@ -194,8 +196,7 @@
     transition: all 0.3s ease;
 }
 #search-artist:hover{
-    background: #14213d;
-    border-radius: 10px;
+    transform: scale(1.2);
 }
 #search-artist:focus{
     outline: none;
@@ -230,7 +231,8 @@
     min-height: 50vh;
     max-height: 70vh;
     overflow: scroll;
-    background: #e5e5e5;
+    background: rgb(35, 34, 35);
+    box-shadow: 0px 0px 5px black;
     margin: 4%;
     border-radius: 10px;
     padding: 2%;
